--- a/eOdznaki.Models/eOdznaki.Models.csproj
+++ b/eOdznaki.Models/eOdznaki.Models.csproj
@@ -10,4 +10,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
+    </ItemGroup>
+
 </Project>
