--- a/eOdznaki.Persistence/eOdznaki.Persistence.csproj
+++ b/eOdznaki.Persistence/eOdznaki.Persistence.csproj
@@ -18,6 +18,8 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
     </ItemGroup>
 
