--- a/eOdznaki.Repositories/eOdznaki.Repositories.csproj
+++ b/eOdznaki.Repositories/eOdznaki.Repositories.csproj
@@ -28,6 +28,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
     </ItemGroup>
 
 </Project>
