--- a/eOdznaki-SPA/package.json
+++ b/eOdznaki-SPA/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@auth0/angular-jwt": "^2.1.0",
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/chart.js": "^2.7.48",
     "angular-bootstrap-md": "^7.4.2",
