--- a/eOdznaki-SPA/package.json
+++ b/eOdznaki-SPA/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^6.1.10",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
     "@angular/core": "^6.0.3",
@@ -27,6 +27,7 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-toastr": "^10.0.0",
     "rxjs": "6.0.0",
     "time-ago-pipe": "^1.3.2",
     "zone.js": "^0.8.26"
