--- a/eOdznaki.Persistence/eOdznaki.Persistence.csproj
+++ b/eOdznaki.Persistence/eOdznaki.Persistence.csproj
@@ -21,6 +21,7 @@
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.3" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.2" />
     </ItemGroup>
 
