--- a/eOdznaki-SPA/package.json
+++ b/eOdznaki-SPA/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ng2-file-upload": "^1.3.0",
     "ngx-toastr": "9.1.2",
     "rxjs": "6.0.0",
     "time-ago-pipe": "^1.3.2",
