--- a/eOdznaki-SPA/package.json
+++ b/eOdznaki-SPA/package.json
@@ -25,6 +25,8 @@
     "@auth0/angular-jwt": "^2.1.0",
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@types/chart.js": "^2.7.48",
+    "@types/google-maps": "^3.2.0",
+    "@types/googlemaps": "^3.30.19",
     "agm-direction": "^0.7.6",
     "angular-bootstrap-md": "^7.4.2",
     "chart.js": "^2.7.3",
