--- a/eOdznaki-SPA/package.json
+++ b/eOdznaki-SPA/package.json
@@ -29,11 +29,12 @@
     "@types/googlemaps": "^3.30.19",
     "agm-direction": "^0.7.6",
     "angular-bootstrap-md": "^7.4.2",
+    "angular-google-charts": "^0.1.3",
     "chart.js": "^2.7.3",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "ngx-google-places-autocomplete": "^2.0.3",
     "ng2-file-upload": "^1.3.0",
+    "ngx-google-places-autocomplete": "^2.0.3",
     "ngx-toastr": "9.1.2",
     "rxjs": "6.0.0",
     "time-ago-pipe": "^1.3.2",
